<resources>
    <string name="app_name">Save The Food</string>
    <string name="app_label_name">SaveFood</string>
    <string name="btn_scan">SCAN</string>
    <string name="btn_favoriet">FAVORITE</string>
    <string name="btn_add">ADD</string>
    <string name="testFindBarcode">Find Barcode</string>
    <string name="textV_name">NAME:</string>
    <string name="btn_search">search</string>
    <string name="recipe_search_hint">Enter a product</string>
    <string name="Initial_Text_Product_Name">Retrieving data from Database</string>
    <string name="source_of_recipe">Source of recipe</string>
    <string name="camera_permission">This app needs access to your camera so it can take pictures of ingredients.</string>
    <string name="internet_permission">This app needs access to your internet connection so it can search for recipes and ingredients in our database.</string>
    <string name="storage_permission">This app needs access to your storage to store favorite recipes offline</string>
    <string name="no_search_key">Please enter a search key!</string>
    <string name="no_internet_connection">Please enable internet connectivity for best experience</string>
    <string name="no_valid_browser">No valid browser found!</string>
    <string name="not_in_database">Not found in database!</string>
    <string name="not_responding_database">Database not responding! Check for internet connection.</string>
    <string name="try_again_connecting">Database not responding! Trying again </string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="heading_nutriments">nutritional value</string>
    <string name="heading_ingredients">Ingredients</string>
    <string name="barcode">barcode</string>
    <string name="item_photo">picture</string>
    <string name="line_ending">\n</string>

    <string name="energy_text">energy</string>
    <string name="sugar_text">sugar</string>
    <string name="fat_text">fat</string>
    <string name="fiber_text">fiber</string>
    <string name="proteins_text">protein</string>
    <string name="sodium_text">sodium</string>
    <string name="iron_text">iron</string>
    <string name="salt_text">salt</string>
    <string name="calcium_text">calcium</string>
    <string name="carbohydrate_text">carbohydrate</string>
    <string name="cholesterol_text">cholesterol</string>
    <string name="fat_saturated_text">saturated</string>
    <string name="fat_trans_text">trans</string>
    <string name="fat_monounsaturated_text">monounsaturated</string>
    <string name="fat_Polyunsaturated_text">polyunsaturated</string>
    <string name="carbs_text">carbs</string>
    <string name="magnesium_text">magnesium</string>
    <string name="potassium_text">potassium</string>
    <string name="zinc_text">zinc</string>
    <string name="phosphorus_text">phosphorus</string>
    <string name="vitaminA_text">vitamin A</string>
    <string name="vitaminC_text">vitamin C</string>
    <string name="thiaminB1_text">thiamin (B1)</string>
    <string name="riboflavinB2_text">riboflavin (B2)  </string>
    <string name="niacidB3_text">niacid (B3)</string>
    <string name="vitaminB6_text">vitamin B6</string>
    <string name="folate_food_text">folate</string>
    <string name="folic_acid_text">folic acid (B1)</string>
    <string name="vitaminB12_text">vitamin B12</string>
    <string name="vitaminD_text">vitamin D</string>
    <string name="vitaminE_text">vitamin E</string>
    <string name="vitaminK_text">vitamin K</string>
    <string name="water_text">water</string>

    <string name="url_wikipedia_nutri_info">https://nl.wikipedia.org/wiki/Nutri-Score</string>
    <string name="url_openfoodfacts_nova_info">https://world.openfoodfacts.org/nova</string>
    <string name="url_edamam">https://www.edamam.com/</string>
    <string name="url_openfoodfacts">https://be-en.openfoodfacts.org/</string>
    <string name="url_api_edamam">https://api.edamam.com/</string>
    <string name="url_api_openfoodfacts">https://world.openfoodfacts.org/api/v0/product/</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="amount_recipes_title">Amount of search items</string>
    <string name="action_settings">Settings</string>
    <string name="no_valid_send_item">no valid send activity found!</string>
    <string name="snack_bar_text">Are you sure you want to delete this?</string>
    <string name="snack_bar_undo">undo</string>
    <string name="no_favorites">No favorites!</string>
    <string name="add_to_favorites">Added to favorites!</string>
    <string name="already_add_to_favorites">Already added to favorites!</string>


</resources>