<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getBarcodeInfo">

    <LinearLayout
        android:id="@+id/linearLayoutprim1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/recipe_search_hint"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search_recipe"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="searchRecipe"
                android:text="@string/btn_search"
                app:icon="@drawable/icon_search"
                app:iconGravity="textStart"
                app:iconTint="@color/colorPrimaryDark" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Scan"
            android:text="@string/btn_scan"
            app:icon="@drawable/icon_scan"
            app:iconGravity="textStart"
            app:iconTint="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Initial_Text_Product_Name"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutprim1" />

    <ImageView
        android:id="@+id/imageView_nutri_grade"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_name">

        <LinearLayout
            android:id="@+id/linearlayoutPrim2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/linearlayoutSec1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="barcode" />

                <TextView
                    android:id="@+id/textview_nutriscores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="nutri" />

            </LinearLayout>
            <ImageView
                android:id="@+id/imageView_picture_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>